# microtermi

./: .gitignore  Cargo.toml  README.md  build-all.bat  build-exe.bat
.cargo/: config.toml
crates/microtermi-core/: Cargo.toml
crates/microtermi-core/src/: discovery.rs  env.rs  git.rs  gitlab.rs  lib.rs  scripts.rs
crates/microtermi-gui/: Cargo.toml  REFACTOR.md
crates/microtermi-gui/src/: ansi.rs  app.rs  config.rs  lib.rs  main.rs
crates/microtermi-gui/src/shared/: mod.rs
crates/microtermi-gui/src/tabs/: coverage.rs  git.rs  mod.rs  multi_run.rs  projects.rs  settings.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
