[package]
name = "microtermi-tauri"
version = "0.1.0"
description = "Microtermi - Tauri desktop app"
edition = "2021"

[lib]
name = "microtermi_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
microtermi-core = { path = "../crates/microtermi-core" }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
rfd = "0.14"
