[package]
name = "microtermi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
walkdir = "2"
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2"
chrono = "0.4"
