[package]
name = "microtermi-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "microtermi"
path = "src/main.rs"

[dependencies]
microtermi-core = { path = "../microtermi-core" }
eframe = "0.29"
egui = "0.29"
rfd = "0.14"
dirs = "5"
opener = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
